@@ -42,24 +42,8 @@ LIBGNOME_REQUIRED=2.0.0
 LIBGIO_REQUIRED=2.15.5
 DBUS_REQUIRED=0.61
 LIBCANBERRA_REQUIRED=0.4
-
-dnl -----------------------------------------------------------
-dnl ISO codes, used for aspell support
-dnl -----------------------------------------------------------
-AC_MSG_CHECKING([whether iso-codes exists and has iso-639 domain])
-if $PKG_CONFIG --variable=domains iso-codes | grep -q 639 ; then
-   AC_MSG_RESULT([yes])
-   iso_codes_prefix=`$PKG_CONFIG --variable=prefix iso-codes`
-   iso_codes_pkgconfig=iso-codes
-   have_iso_codes=yes
-else
-   AC_MSG_RESULT([no])
-   iso_codes_prefix=
-   iso_codes_pkgconfig=
-   have_iso_codes=no
-fi
-
-AC_DEFINE_UNQUOTED([ISO_CODES_PREFIX],["$iso_codes_prefix"],[ISO codes prefix])
+ENCHANT_REQUIRED=1.2.0
+ISO_CODES_REQUIRED=0.35
 
 dnl -----------------------------------------------------------
 dnl D-BUS
@@ -150,33 +134,42 @@ AC_SUBST(TWITUX_CFLAGS)
 AC_SUBST(TWITUX_LIBS)
 
 dnl -----------------------------------------------------------
-dnl ASpell
+dnl Enchant
 dnl -----------------------------------------------------------
-AC_ARG_ENABLE(aspell,
-              AS_HELP_STRING([--enable-aspell=@<:@no/yes/auto@:>@],
-                             [compile with aspell support]), ,
-                             enable_aspell=auto)
+AC_ARG_ENABLE(spell,
+              AS_HELP_STRING([--enable-spell=@<:@no/yes/auto@:>@],
+                             [compile with spell support]), ,
+                             enable_spell=auto)
 
-if test "x$enable_aspell" = "xyes" -a "x$have_iso_codes" != "xyes"; then
-   AC_MSG_ERROR([You must have iso-codes with the iso-639 domain to use aspell.])
-fi
+if test "x$enable_spell" != "xno"; then
+   PKG_CHECK_MODULES(ENCHANT,
+   [
+      enchant >= $ENCHANT_REQUIRED,
+      iso-codes >= $ISO_CODES_REQUIRED
+   ], have_enchant="yes", have_enchant="no")
 
-if test "x$enable_aspell" != "xno" -a "x$have_iso_codes" = "xyes"; then
-   AC_CHECK_LIB(aspell, aspell_speller_check,have_aspell=yes,have_aspell=no,)
-
-   if test "x$have_aspell" = "xyes"; then
-      AC_DEFINE(HAVE_ASPELL, 1, [Define if we have aspell])
-      TWITUX_LIBS="$TWITUX_LIBS -laspell"
-   else
-      have_aspell=no
+   if test "x$have_enchant" = "xyes"; then
+      AC_MSG_CHECKING([whether iso-codes has iso-639 and iso-3166 domains])
+      if $PKG_CONFIG --variable=domains iso-codes | grep 639 > /dev/null && \
+         $PKG_CONFIG --variable=domains iso-codes | grep 3166 > /dev/null ; then
+            AC_DEFINE_UNQUOTED(ISO_CODES_PREFIX, ["`$PKG_CONFIG --variable=prefix iso-codes`"], [ISO codes prefix])
+            AC_DEFINE(HAVE_ENCHANT, [], [Define if you have libenchant])
+            result=yes
+      else
+            result=no
+            have_enchant="no"
+      fi
+      AC_MSG_RESULT([$result])
    fi
 else
-   have_aspell=no
+   have_enchant=no
 fi
 
-if test "x$enable_aspell" = "xyes" -a "x$have_aspell" != "xyes"; then
-   AC_MSG_ERROR([Couldn't find aspell.])
+if test "x$enable_spell" = "xyes" -a "x$have_enchant" != "xyes"; then
+   AC_MSG_ERROR([Couldn't find spell dependencies.])
 fi
+
+AM_CONDITIONAL(HAVE_ENCHANT, test "x$have_enchant" = "xyes")
 
 dnl -----------------------------------------------------------
 dnl Language Support
@@ -199,7 +192,7 @@ po/Makefile.in
 
 echo
 echo "Prefix:        $prefix"
-echo "ASpell:        $have_aspell"
+echo "Spell:         $have_enchant"
 echo "DBUS:          $have_dbus"
 echo "GNOME Keyring: $have_gnome_keyring"
 echo
